[gd_scene load_steps=2 format=3 uid="uid://7265h3h34unm"]

[ext_resource type="Script" uid="uid://fru48j6lxgyl" path="res://scenes/ui/Card.gd" id="1_34xrx"]

[node name="Card" type="Control"]
custom_minimum_size = Vector2(140, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 140.0
offset_bottom = 200.0
script = ExtResource("1_34xrx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="Highlight" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0.2, 0.2)

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 5.0
offset_bottom = 31.0
grow_horizontal = 2
text = "Card Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 56.0
grow_horizontal = 2
text = "Type"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="StatsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="CostLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="CostIcon" type="Label" parent="StatsContainer"]
layout_mode = 2
text = "âš¡"

[node name="Spacer1" type="Control" parent="StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HeatLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="HeatIcon" type="Label" parent="StatsContainer"]
layout_mode = 2
text = "ðŸ”¥"

[node name="Spacer2" type="Control" parent="StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DurabilityLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
text = "3"
horizontal_alignment = 1

[node name="DurabilityIcon" type="Label" parent="StatsContainer"]
layout_mode = 2
text = "ðŸ”§"

[node name="EffectsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Card effects"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
